# pypolyphonicanalysis

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
pypolyphonicanalysis/: settings.py
pypolyphonicanalysis/analysis/: analysis_runner.py  recording.py
pypolyphonicanalysis/analysis/f0_processing/: base_f0_processor.py  frequency_range_filter.py  masking_filter.py  maximum_cent_difference_from_mean_filter.py  most_likely_voices_filter.py
pypolyphonicanalysis/analysis/pitch_drift_detrenders/: base_pitch_drift_detrender.py  log_linear_detrender.py
pypolyphonicanalysis/datamodel/data_multiplexing/: splits.py  sum_track_feature_stream_mux.py  sum_track_provider.py
pypolyphonicanalysis/datamodel/dataloaders/: base_data_loader.py  cantoria_data_loader.py  csd_data_loader.py  dcs_data_loader.py  esmuc_data_loader.py  gvm_data_loader.py  monophonic_track_collection_data_loader.py  musdb_data_loader.py  recombination_data_loader.py
pypolyphonicanalysis/datamodel/evaluation/: multiple_f0_estimation_test_set_evaluator.py  test_set_evaluator.py
pypolyphonicanalysis/datamodel/features/: feature_generators.py  feature_store.py  feature_stream.py  features.py
pypolyphonicanalysis/datamodel/summing_strategies/: base_summing_strategy.py  direct_sum.py  ground_truth_sum.py  reverb_sum.py  (+1 more)
pypolyphonicanalysis/models/: base_multiple_f0_estimation_model.py  baseline_model.py  evaluation_metrics.py  losses.py  model_utils.py  residual_model.py  unet_model.py
pypolyphonicanalysis/processing/: add_noise.py  base_processor.py  base_sum_track_processor.py  distort.py  filter.py  frequency_range_filter.py  masking_filter.py
pypolyphonicanalysis/utils/: conservatoire_corpus_utils.py  utils.py
scripts/: analyze_conservatoire_corpus.py  convert_musdb_files_to_wavs.py  evaluate_model.py  generate_artificial_training_data.py  generate_base_training_data.py  generate_training_data.py  scrape_gvm.py  train_model.py  train_model_live_data_generation.py
scripts/conservatoire_corpus_tools/: conservatoire_corpus_utils.py  export_data.py  process_tape_data.py  readme.txt  split_uncut_files.py
scripts/wav_clue_splitter/: requirements.txt  wav_cue_splitter.py
(+22 files in other folders)
