[tool.poetry]
name = "pypolyphonicanalysis"
version = "0.1.0"
description = "Toolkit for analysis recordings of polyphonic vocal music"
authors = ["Levan Shugliashvili"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "2.6.4"
pydantic-settings = "2.2.0"
tqdm = "4.66.2"
types-tqdm = "4.66.0"
types-requests = "2.31.0.20240406"
librosa = "0.10.1"
matplotlib = "3.8.4"
pandas = "2.1.3"
pandas-stubs = "2.2.1.240316"
pydub = "0.25.1"
scipy = "1.12.0"
scikit-learn = "1.4.1.post1"
pumpp = "0.6.0"
mir-eval = "0.7"
resampy = "0.4.3"
seaborn = "0.13.2"
soundfile = "0.12.1"
gooey = "1.0.8.1"
joblib = "1.3.2"
musdb = "^0.4.2"
pyroomacoustics = "^0.7.3"
setuptools = "^69.2.0"
torch = "^2.2.2"
pyrubberband = "^0.3.0"
torchdata = "^0.7.1"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.3.5"
mypy = "^1.9.0"
pip = "^24.0"
tensorboard = "^2.16.2"
requests = "2.31.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 180

